# proyecto_final_izainea

./: .gitignore  LICENSE  README.md  pyproject.toml
Codigo/: Cuaderno_ETL.ipynb  Cuaderno_Experimentos_AS.ipynb  Regresión Logistica iris.ipynb  Testeo_api.ipynb  introduccion_streamlit.ipynb  mi_primer_pipeline.pkl  mi_segundo_pipeline.pkl  modelo_logistico.joblib  streamlit_despliegue.ipynb  streamlit_formulario_completo.ipynb  streamlit_manejo_errores.ipynb
api/: main.py
